# lutron-tools

./: .env.example  .gitignore  CLAUDE.md  KNOWN_ISSUES.md  LUTRON_CCA_PROTOCOL.md  LUTRON_LEVEL_COMMANDS.md  LUTRON_PACKET_ANALYSIS.md  QUICKSTART.md  README.md  SCHEMA_EXPLORATION.md  TODO.md  analyze_comprehensive.py  analyze_pairing_capture.py  analyze_pairing_pairs.py  biome.json  capture.jsonl  compare_databases.py  compare_transmissions.py  config.example.json  db table list.txt  demod_compare.py  esp32_controller.py  event_aggregator.py  extract_pairing_packets.py  lutron-rf  lutron_decode.py  lutron_encode.py  lutron_map_schedule_usd.csv  multi_capture.py  my-capture.jsonl  package-lock.json  package.json  results.numbers  screenlog.0  skills-lock.json  tsconfig.json  tsconfig.typecheck.json  turbo.json  udp_transport.py  vive-control.jsonl  (+4 more)
.claude/: settings.json  settings.local.json
.githooks/: pre-push
.remember/: remember.md
backend/: package.json
bridge/: Dockerfile  README.md  ccx-bridge.example.yaml  deploy-ha.sh  docker-compose.yml  main.ts
caseta-uart/: screenlog.0 copy
cca/: Cargo.toml  build.rs  cca.h
ccx/: addressing.ts  ccx_decoder.py  coap.ts  config.ts  constants.ts  decoder.ts  encoder.ts  tmf-diag.ts  types.ts
cli/: nucleo.ts
config/: ccx-bridge.example.json  ccx-bridge.example.yaml
data/: device-fingerprints.json  device-fingerprints.tsv  lutron_map_schedule_usd_wireless_targets.csv  wiz-device-serials.json
db/: extract_lutron_db.py  lutron-tool.py
docs/: CCA.md  CCA_PROTOCOL.md  CCX.md  CCX_THREAD_SNIFFING.md  DATABASE_EDITING.md  FEATURES.md  HW_vs_RA3_comparison.md  KNOWN_ISSUES.md  LEVEL_COMMANDS.md  PAIRING_ANALYSIS.md  SUMMARY.md  TOOLING_ANALYSIS.md  architecture-rework.md  bridge-state-spec.md  caseta-bridge-pairing.md  cca-device-config.md  cca-pairing-protocol.md  cca-protocol-notes.md  cca-protocol.md  ccx-coap-protocol.md  ccx-commissioning-capture.md  ccx-device-map.md  ccx-programming-plane.md  ccx-protocol-notes.md  cloud-leap-proxy.md  designer-db-enumeration.md  designer-ra3-in-hw-project-fix.md  dimming-curves.md  firmware-cdn-re.md  firmware-update-infra.md  index.md  infrastructure-notes.md  ipl-protocol.md  leap-api-exploration.md  leap-api-spec.yaml  leap-ccx-addressing.md  leap-command-surface.md  leap-routes.md  lutron-curves.jsx  lutron-localdb-guide.md  (+28 more)
esphome/: cca-proxy.yaml  esp32_controller.py  pico-proxy-cc1101.yaml  udp_stream.h
firmware/: .clang-format  .cppcheck-suppress  CMakeLists.txt  Makefile  PROJECT.md  README.md  check-build-warnings.sh  openocd.cfg
firmware/cmake/: arm-none-eabi.cmake
firmware/include/: FreeRTOSConfig.h  lwipopts.h  stm32h7xx_hal_conf.h
firmware/linker/: STM32H723ZGTx_FLASH.ld
firmware/ncp/: ot-ncp-ftd-tmf.hex  ot-ncp-ftd.hex
firmware/src/: main.cpp  stm32h7xx_it.c  syscalls.c  system_stm32h7xx.c
firmware/src/bsp/: bsp.h  clock.c  gpio.c  spi.c  uart.c  watchdog.c  watchdog.h
firmware/src/cca/: cc1101.c  cc1101.h  cca_auto_pair.cpp  cca_auto_pair.h  cca_commands.cpp  cca_commands.h  cca_crc.h  cca_decoder.h  cca_encoder.h  cca_generated.h  cca_n81.h  cca_ota_session.cpp  cca_ota_session.h  cca_ota_tx.h  cca_pairing.cpp  cca_pairing.h  cca_protocol.h  cca_task.cpp  cca_task.h  cca_tdma.cpp  cca_tdma.h  cca_timer.c  cca_timer.h  cca_tx_builder.h  cca_types.h
firmware/src/ccx/: ccx_cbor.c  ccx_cbor.h  ccx_generated.h  ccx_msg.c  ccx_msg.h  ccx_task.cpp  ccx_task.h  coap.c  coap.h  hdlc.c  hdlc.h  ipv6_udp.c  ipv6_udp.h  smp_serial.c  smp_serial.h  spinel_frame.c  spinel_frame.h  spinel_props.h  thread_config.example.h
firmware/src/net/: eth.c  eth.h  stream.cpp  stream.h
firmware/src/net/lwip_arch/: sys_arch.c
firmware/src/net/lwip_arch/arch/: cc.h  sys_arch.h
firmware/src/shell/: shell.cpp  shell.h
firmware/src/storage/: flash_store.cpp  flash_store.h
firmware/stm32l1-sniffer/: CMakeLists.txt
firmware/stm32l1-sniffer/linker/: STM32L100CB.ld
firmware/stm32l1-sniffer/src/: bsp.h  hdlc.c  hdlc.h  main.c  semihost.c  startup_stm32l100xb.s
firmware/tests/: test_cbor.cpp  test_ccx_coap.cpp  test_cmd_builders.cpp  test_cmd_stubs.cpp  test_crc.cpp  test_decoder.cpp  test_encoder.cpp  test_hdlc.cpp  test_main.cpp  test_n81.cpp  test_ota_full_tx.cpp  test_ota_session.cpp  test_ota_tx.cpp  test_smp_dfu.cpp  test_spinel.cpp  test_tdma.cpp  test_tdma_jobs.cpp
firmware/tests/stubs/: FreeRTOS.h  bsp.h  queue.h  stm32h7xx_hal.h  stream.h  task.h
ldproxy/: README.md  package-lock.json  package.json  server.js
lib/: bridge-core.ts  cca-ota-codec.ts  cca-ota-demod.ts  cca-ota-tx-builder.ts  ccx-coap.ts  config.ts  env.ts  frame-pipeline.ts  ieee802154.ts  ipl.ts  ldf.ts  leap-client.ts  serial-sniffer.ts  thread-crypto.ts  warm-dim.ts  wiz-color.ts
lutron_cca/: PROTOCOL.md  __main__.py  cli.py  crc.py  known_devices.json  packet.py
mirror/: Lutron.Gulliver.Core.Configuration.dll.config  caseta_leap.crt  designer_client.crt  designer_client.csr  designer_client.key  designer_client2.crt  ext.cnf  project_cert.srl  project_ssh.pub  ssh_designer  ssh_designer-cert.pub  ssh_designer.pub
protocol/: README.md  cca.protocol.ts  cca.yaml  ccx.protocol.ts  ccx.yaml  dsl.ts  protocol-ui.ts  shared.ts
proxy/: package.json
rf/: analyze_bit_framing.py  analyze_debug.py  analyze_fixed.py  analyze_fixed_threshold.py  analyze_streaming.py  bit_timing.py  capture.py  cca_playground.db  check_encoded_size.py  check_encoding.py  compare_captures.py  compare_packet_duration.py  database.py  devices.json  devices_backup_20260102_225005.json  esp32_controller.py  event_aggregator.py  freq_histogram.py  lutron_cc1101.h  mqtt_client.py  packet_relay.py  pico-proxy.yml  proxy_engine.py  test_encoder.py  udp_transport.py  (+1 more)
rf-protocol/: cca.yaml
rf/cca/: Cargo.toml  build.rs  cbindgen.toml  cca.h  pyproject.toml
rf/cca/src/: crc.rs  embedded.rs  error.rs  lib.rs  live.rs  n81.rs  serve.rs
rf/cca/src/codegen/: markdown.rs  mod.rs  rust.rs  typescript.rs
rf/cca/src/decode/: log.rs
rf/cca/src/ffi/: c_api.rs  mod.rs
rf/cca/src/packet/: mod.rs  parser.rs  types.rs
(+686 files in other folders)
