[package]
name = "cca"
version = "0.1.0"
edition = "2021"
description = "Lutron Clear Connect Type A protocol encoder/decoder"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cca"
path = "src/bin/cca.rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
hex = "0.4"

# CLI dependencies (only for non-embedded targets)
[target.'cfg(not(target_arch = "xtensa"))'.dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
reqwest = { version = "0.12", features = ["stream"] }

# Optional PyO3 bindings
[dependencies.pyo3]
version = "0.23"
optional = true
features = ["extension-module", "abi3-py38"]

[features]
default = []
python = ["pyo3"]

[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level = "z"    # Optimize for size (important for ESP32)
lto = true
